syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.enums.address";

enum AddressTypeProto {
  MAIN = 0;
  SECONDARY = 1;
  CORRESPONDENCE = 2;
}