syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.enums.common";

enum StatusProto {
  NULL_STATUS = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}